# ipfs-tools

./: .env  .gitignore  Cargo.toml  Dockerfile.bitswap-monitoring-client  Dockerfile.builder  Dockerfile.monitoring-size-estimator  Dockerfile.wantlist-client  LICENSE  README.md  build-docker-images.sh  build-in-docker.sh  build.rs  json-to-csv-config.yaml
.github/: dependabot.yml
.github/workflows/: Build_release.yaml  CI.yaml
bitswap-discovery-probe/: Cargo.toml  README.md  config.yaml
bitswap-discovery-probe/src/: config.rs  main.rs
bitswap-monitoring-client/: Cargo.toml  README.md  config.yaml  docker-entrypoint.sh
bitswap-monitoring-client-lib/: Cargo.toml
bitswap-monitoring-client-lib/src/: http.rs  lib.rs  net.rs
bitswap-monitoring-client/src/: config.rs  disklog.rs  gateways.rs  geolocation.rs  main.rs  prom.rs
cid-converter/: Cargo.toml
cid-converter/src/: main.rs
cid-decode/: Cargo.toml
cid-decode/src/: codec.rs  main.rs  multicodecs.rs
common/: Cargo.toml
common/src/: connection_event_types.csv  entry_types.csv  ipfs.rs  lib.rs  logging.rs  message_types.csv  wantlist.rs
csv-to-graph/: Cargo.toml
csv-to-graph/src/: main.rs
db/: Cargo.toml  README.md
db-exporter/: Cargo.toml  README.md
db-exporter/src/: main.rs  prom.rs
db/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
db/migrations/2020-04-03-093430_factor-out-unixfs/: up.sql
db/migrations/2020-04-03-170006_add-file-heuristics/: down.sql
db/migrations/2020-04-05-174227_more-heuristics/: down.sql  up.sql
db/migrations/2020-04-09-144856_add-timestamps/src/: schema.rs
db/migrations/2020-04-09-160051_add-surrogate-resolve-ids/: down.sql  up.sql
db/migrations/2020-05-24-083822_blocks-add-bytea-cid-column/: down.sql  up.sql
db/migrations/2020-05-24-145849_drop-blocks-base32-cidv1/: down.sql  up.sql
db/migrations/2020-05-24-204624_remove-unixfs-links-base32-cidv1/: down.sql  up.sql
db/src/: db.rs  lib.rs  model.rs  schema.rs
gateway-finder/: Cargo.toml
gateway-finder/src/: main.rs
ipfs-gateway-finder/: Cargo.toml  README.md
ipfs-gateway-finder/src/: main.rs
ipfs-json-to-csv/: Cargo.toml  json-to-csv-config.yaml
ipfs-json-to-csv/src/: config.rs  conntrack.rs  main.rs
ipfs-monitoring-plugin-client/: Cargo.toml
ipfs-monitoring-plugin-client/src/: http.rs  lib.rs  monitoring.rs  tcp.rs
ipfs-walk-tree/: Cargo.toml
ipfs-walk-tree/src/: main.rs
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/00000000000000_diesel_initial_setup/src/: schema.rs
migrations/2020-04-03-093430_factor-out-unixfs/: down.sql
migrations/2020-04-03-170006_add-file-heuristics/: up.sql
migrations/2020-04-05-174227_more-heuristics/src/: schema.rs
migrations/2020-04-09-144856_add-timestamps/: down.sql  up.sql
monitoring-size-estimator/: Cargo.toml  README.md  config.yaml
monitoring-size-estimator/src/: config.rs  main.rs  prom.rs
resolver/: Cargo.toml  README.md  build.rs
resolver/src/: heuristics.rs  ipfs.rs  logging.rs  main.rs  unixfs.rs
src/: db.rs  heuristics.rs  ipfs.rs  main.rs  model.rs  schema.rs  unixfs.rs
unify-bitswap-traces/: Cargo.toml  README.md  unify-bitswap-traces-config.yaml
unify-bitswap-traces/src/: config.rs  main.rs  matcher.rs  source.rs
wantlist-client/: Cargo.toml  README.md  wantlist-client-config.yaml
wantlist-client-lib/: Cargo.toml
wantlist-client-lib/src/: lib.rs  net.rs
wantlist-client/src/: main.rs  net.rs  prom.rs
