[package]
name = "ipfs-resolver"
version = "0.1.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.7"
log = "0.4.8"
flexi_logger = "0.15.2"
ipfs-api = "0.7.1"
diesel = { version = "1.4.4", features = ["postgres"] }
tokio = { version = "0.2.13", features = ["rt-threaded","macros"] }
dotenv = "0.15.0"
cid = "0.4.0"
hyper = "0.13.4"
reqwest = {version="0.10.4", features = ["json"]}
serde = "1.0.105"
serde_json = "1.0.50"
multibase = "0.8.0"