[workspace]
members = [
    "db",
    "resolver",
    "db-exporter",
    "common",
    "bitswap-monitoring-client",
    "ipfs-json-to-csv",
    "ipfs-gateway-finder",
    "bitswap-monitoring-client-lib",
    "ipfs-walk-tree",
    "cid-decode",
    "csv-to-graph",
    "unify-bitswap-traces",
    "bitswap-discovery-probe",
]
