[package]
name = "bitswap-discovery-probe"
version = "0.2.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2021"

[dependencies]
ipfs-resolver-common = { path = "../common" }
ipfs_monitoring_plugin_client = { path = "../ipfs-monitoring-plugin-client" }
tokio = { version = "1", features = ["rt", "net", "sync", "rt-multi-thread","time", "macros"] }
log = "0.4.14"
flexi_logger = "0.22.5"
failure = "0.1.8"
futures-util = "0.3.17"
chrono = { version = "0.4.19", features = ["serde"] }
prometheus_exporter = "0.8.4"
# This needs to be matching the version prometheus_exporter uses!
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4.0"
serde = "1.0.138"
serde_yaml = "0.8.26"
clap = "2.33.3"
cid = "0.8.2"
waitgroup = "0.1.2"
futures = "0.3.19"
multiaddr = "0.14.0"
csv = "1.1.6"