[package]
name = "bitswap-monitoring-client"
version = "0.6.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2021"

[dependencies]
ipfs-resolver-common = { path = "../common" }
ipfs_monitoring_plugin_client = { path = "../ipfs-monitoring-plugin-client" }
tokio = { version = "^1.41", features = ["rt", "net", "sync", "rt-multi-thread", "time", "macros", "signal", "fs", "io-util"] }
log = "0.4.21"
flexi_logger = "0.29.8"
failure = "0.1.8"
futures-util = "0.3.31"
tokio-util = "0.7.12"
futures = "0.3.30"
chrono = { version = "0.4.31", features = ["serde"] }
prometheus_exporter = "0.8.4"
# This needs to be matching the version prometheus_exporter uses!
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.5.0"
serde = "1.0.218"
serde_yaml = "0.9.25"
clap = "2.33.3"

# MaxMind database reader.
maxminddb = "0.24.0"

# Multiaddress parser.
multiaddr = "0.17"

# ISO 3166-1 countries.
celes = "2.5.0"

# Logging to file
async-compression = { version = "0.3.15" , default-features = false, features=["tokio","gzip"]}
serde_json = "1.0.96"
