[package]
name = "cid-decode"
version = "0.2.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-resolver-common = {path="../common"}
failure = "0.1.7"
log = "0.4.8"
dotenv = "0.15.0"
flexi_logger = "0.22.5"
cid = "^0.8"
multibase = "^0.8"
multihash = "0.11.2"