[package]
name = "cid-decode"
version = "0.2.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-resolver-common = {path="../common"}
failure = "0.1.7"
log = "0.4.21"
dotenv = "0.15.0"
flexi_logger = "0.28.5"
cid = "0.11.0"
lazy_static = "1.4.0"
