[package]
name = "ipfs-resolver-common"
version = "0.1.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
flexi_logger = "^0.15"
failure = "^0.1"
serde = "1.0.137"
serde_json = "1.0.81"
chrono = { version="0.4.11", features = ["serde"] }
parity-multiaddr = "0.11.2"
hyper = "0.14.14"
reqwest = { version = "0.10.4", features = ["blocking","json"] }
ipfs-api = "^0.13"
percent-encoding = "2.1.0"
glob = "^0.3"
