[package]
name = "ipfs-resolver-common"
version = "0.2.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
flexi_logger = "0.22"
failure = "^0.1"
serde = "1.0.141"
serde_json = "1.0.81"
chrono = { version="0.4.11", features = ["serde"] }
parity-multiaddr = "0.11.2"
glob = "^0.3"
