[package]
name = "ipfs-resolver-db"
version = "0.1.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-resolver-common = {path="../common"}
failure = "^0.1"
log = "^0.4"
diesel = { version = "^1", features = ["postgres","chrono","r2d2"] }
dotenv = "^0.15"
lazy_static = "^1"
chrono = "^0.4"
ipfs-api = "^0.13"
whatlang = "^0.13"
cid = "^0.5"
multibase = "^0.8"
chardet = "^0.2"