[package]
name = "ipfs-gateway-finder"
version = "0.3.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-resolver-common = {path = "../common"}
ipfs_monitoring_plugin_client = {path = "../ipfs-monitoring-plugin-client" }
failure = "0.1.7"
log = "0.4.8"
flexi_logger = "0.24.2"
futures-util = "0.3.26"
reqwest = { version = "0.11", features = ["json","rustls-tls-native-roots"],default-features = false }
multibase = "0.9.1"
chrono = "0.4.22"
serde = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "^1", features = ["rt-multi-thread","macros","sync"] }
rand = "0.8.5"
parity-multiaddr = "0.11.2"
ipfs-api-backend-hyper = {version="0.6",features = ["with-hyper-rustls"],default-features = false}
cid = "0.10.1"
http = "0.2.1"
csv = "1.2.0"
clap = "2.33.3"