[package]
name = "ipfs-gateway-finder"
version = "0.4.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-resolver-common = {path = "../common"}
ipfs_monitoring_plugin_client = {path = "../ipfs-monitoring-plugin-client" }
failure = "0.1.7"
log = "0.4.21"
flexi_logger = "0.28.5"
futures-util = "0.3.31"
reqwest = { version = "0.11", features = ["json","rustls-tls-native-roots"],default-features = false }
multibase = "0.9.1"
chrono = "0.4.31"
serde = "1.0.215"
serde_json = "1.0.138"
tokio = { version = "^1", features = ["rt-multi-thread","macros","sync"] }
rand = "0.8.5"
ipfs-api-backend-hyper = {version="0.6",features = ["with-hyper-rustls"],default-features = false}
cid = "0.11.0"
http = "0.2.9"
csv = "1.3.1"
clap = "2.33.3"
multiaddr = "0.17.1"