[package]
name = "ipfs-json-to-csv"
version = "0.1.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-resolver-common = {path = "../common"}
failure = "0.1.7"
log = "0.4.8"
dotenv = "0.15.0"
clap = "2.33.1"
csv = "1.1"
flate2 = "1.0.14"
serde = "1.0.110"
serde_json = "1.0.53"
chrono = "0.4.11"
serde_yaml = "0.8.13"