[package]
name = "ipfs-json-to-csv"
version = "0.2.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-resolver-common = {path = "../common"}
failure = "0.1.7"
log = "0.4.8"
clap = "2.33.1"
csv = "1.1"
flate2 = "1.0.24"
serde = "1.0.145"
serde_json = "1.0.85"
chrono = "0.4.22"
serde_yaml = "0.9.13"