[package]
name = "ipfs-json-to-csv"
version = "0.2.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-resolver-common = {path = "../common"}
failure = "0.1.7"
log = "0.4.20"
clap = "2.33.1"
csv = "1.2"
flate2 = "1.0.28"
serde = "1.0.194"
serde_json = "1.0.108"
chrono = "0.4.31"
serde_yaml = "0.9.25"