[package]
name = "ipfs_monitoring_plugin_client"
version = "0.3.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-resolver-common = { path = "../common" }
tokio = { version = "^1", features = ["net", "sync", "macros"] }
tokio-util = { version = "^0.6", features = ["codec"] }
tokio-serde = { version = "^0.8", features = ["json"] }
bytes = "^1"
log = "^0.4"
futures = "^0.3"
futures-util = "^0.3"
chrono = { version = "^0.4", features = ["serde"] }
multiaddr = "^0.13"
serde = "1.0.137"
serde_json = "1.0.51"
failure = "^0.1"
flate2 = "^1"
reqwest = { version = "0.11.10", features = ["json"] }