[package]
name = "ipfs_monitoring_plugin_client"
version = "0.5.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2021"

[dependencies]
ipfs-resolver-common = { path = "../common" }
tokio = { version = "^1", features = ["net", "sync", "macros"] }
tokio-util = { version = "^0.7", features = ["codec"] }
tokio-serde = { version = "^0.8", features = ["json"] }
bytes = "^1"
log = "^0.4"
futures = "^0.3"
futures-util = "^0.3"
chrono = { version = "^0.4", features = ["serde"] }
serde = "1.0.190"
serde_json = "1.0.108"
failure = "^0.1"
flate2 = "^1"
reqwest = { version = "0.11",default-features = false, features = ["json", "rustls-tls-native-roots"] }
lapin = { version = "2.2.1", default-features = false, features = ["rustls"] }
serde_repr = "^0.1"