[package]
name = "ipfs-walk-tree"
version = "0.1.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-resolver-db = {path = "../db"}
ipfs-resolver-common = {path = "../common"}
failure = "0.1.7"
log = "0.4.8"
dotenv = "0.15.0"
flexi_logger = "0.15.2"
cid = "0.5.1"
cursive = "0.14.0"
cursive_table_view = "0.12.0"
hex = "0.4.2"
diesel = { version = "^1", features = ["postgres","chrono"] }
cursive-async-view = "0.3.3"