[package]
name = "monitoring-size-estimator"
version = "0.1.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2021"

[dependencies]
ipfs-resolver-common = { path = "../common" }
ipfs_monitoring_plugin_client = { path = "../ipfs-monitoring-plugin-client" }
tokio = { version = "1", features = ["rt", "net", "sync", "rt-multi-thread", "time", "macros", "signal", "fs"] }
log = "0.4.21"
flexi_logger = "0.29.8"
failure = "0.1.8"
futures-util = "0.3.31"
chrono = { version = "0.4.31", features = ["serde"] }
prometheus_exporter = "0.8.4"
# This needs to be matching the version prometheus_exporter uses!
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.5.0"
serde = "1.0.218"
serde_yaml = "0.9.25"
clap = "2.33.3"

# Library for numerical root finding
roots = "0.0.8"

# Statistics, for means and whatnot
statistical = "1.0.0"