[package]
name = "ipfs-resolver"
version = "0.1.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-resolver-db = {path = "../db"}
failure = "0.1.7"
log = "0.4.8"
dotenv = "0.15.0"
flexi_logger = "0.15.2"
ipfs-api = "0.7.1"
tokio = { version = "0.2.13", features = ["rt-threaded","macros"] }
cid = "0.4.0"
hyper = "0.13.4"
reqwest = {version="0.10.4", features = ["json"]}
serde = "1.0.105"
serde_json = "1.0.50"
multibase = "0.8.0"
tree_magic = "0.2.3"
chardet = "0.2.4"
lazy_static = "1.4.0"
protobuf = "2.12.0"
whatlang = "0.7.3"
chardetng = "0.1.6"
percent-encoding = "2.1.0"
chrono = "0.4.11"
diesel = { version = "1.4.4", features = ["postgres","chrono"] }

[build-dependencies]
protobuf-codegen-pure = "2.3"