[package]
name = "ipfs-resolver"
version = "0.1.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-resolver-db = {path = "../db"}
ipfs-resolver-common = {path = "../common"}
failure = "0.1.7"
log = "0.4.8"
dotenv = "0.15.0"
flexi_logger = "0.15.2"
cid = "0.5.0"
multibase = "0.8.0"
tree_magic = "0.2.3"
# This is a forked version of the original rust-chardet with a fix for an unreachable! panic.
chardet = { git = "https://github.com/mrd0ll4r/rust-chardet" }
lazy_static = "1.4.0"
protobuf = "2.14.0"
whatlang = "0.7.3"
chardetng = "0.1.6"
chrono = "0.4.11"
diesel = { version = "1.4.4", features = ["postgres","chrono"] }
clap = "2.33.1"
reqwest = { version = "0.10.4", features = ["blocking","json"] }
ipfs-api = "0.13.0"

[build-dependencies]
protobuf-codegen-pure = "2.14.0"
