[package]
name = "unify-bitswap-traces"
version = "0.1.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-resolver-common = {path = "../common"}
failure = "0.1.7"
log = "0.4.8"
clap = "2.33.1"
csv = "1.1"
flate2 = "1.0.24"
serde = "1.0.137"
serde_json = "1.0.81"
glob = "0.3.0"
chrono = "0.4.11"
serde_yaml = "0.8.24"
itertools = "0.9.0"