[package]
name = "unify-bitswap-traces"
version = "0.2.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-resolver-common = {path = "../common"}
failure = "0.1.7"
log = "0.4.20"
clap = "2.33.1"
csv = "1.2"
flate2 = "1.0.27"
serde = "1.0.160"
serde_json = "1.0.95"
glob = "0.3.1"
chrono = "0.4.24"
serde_yaml = "0.9.25"
itertools = "0.11.0"