[package]
name = "wantlist-client-lib"
version = "0.1.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-resolver-common = {path="../common"}
tokio = { version = "0.2.18", features = ["tcp","sync","macros"] }
tokio-util = {version="0.3.1",features=["codec"]}
bytes = "0.5.4"
log = "0.4.8"
futures = "0.3.4"
futures-util = "0.3.4"
serde_json = "1.0.51"
